@@ -1,6 +1,6 @@
 Package: optimx
-Version: 2016.8.25
-Date: 2016-08.25
+Version: 2017.4.4
+Date: 2017-04-04
 Title: A Replacement and Extension of the 'optim' Function
 Authors@R: c( person(given = c("John", "C"), family = "Nash", role =
     c("aut", "cre"), email = "nashjc@uottawa.ca"), person(given =
